--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Code, Samples, Apps, Scripts, Hacks - by Andreas Marschke</title>
+        <meta name="description" content="Examples in software development. Small Applications to learn how different software architectures work"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -24,25 +24,59 @@
 
         <!-- Add your site or application content here -->
 
-				<div class="container">
-					<div class="row">		
+				<div id="wrap" class="container">
+					<div id="main" class="row">		
 						<div class="col-md-12">
 							<div class="page-header">
-								<h1>Fun exercises in web technology</h1>
+								<h1>Code, Samples, Apps, Scripts, Hacks</h1>
+							</div>
+							<div class="jumbotron">
+								<div class="container">
+									<div id="carousel-preview-page" class="carousel slide">
+										<ol class="carousel-indicators">
+											<li data-target="#carousel-preview-page" data-slide-to="0" class="active"></li>
+											<li data-target="#carousel-preview-page" data-slide-to="1" class=""></li>
+											<li data-target="#carousel-preview-page" data-slide-to="2" class=""></li>
+										</ol>
+										<div class="carousel-inner">
+											<div class="item active" id="angularjs">
+												<img src="img/angularjs.png" alt="AngularJS"/>
+												<div class="carousel-caption">
+												</div>
+											</div>
+											<div class="item" id="mongodb">
+												<img src="img/mongodb.png" alt="MongoDB"/>
+												<div class="carousel-caption">
+												</div>
+											</div>
+											<div class="item" id="nodejs">
+												<img src="img/nodejs.png" alt="NodeJS">
+												<div class="carousel-caption">
+												</div>
+											</div>
+										</div>
+										<a class="left-carousel-control" href="#carousel-preview-page" data-slide="prev">
+											<span class="icon-prev"></span>
+										</a>
+										<a class="left-carousel-control" href="#carousel-preview-page" data-slide="next">
+											<span class="icon-next"></span>
+										</a>
+									</div>
+								</div>
 							</div>
 							<div class="container">
 								<div class="row">
-									<div class="col-md-6 col-md-offset-3">
-										<p>On this site you will find couple of experiments in NodeJS and published on github.</p>
-										<p>I wrote these as excercise material to get comfortable in several modern techniques and frameworks. Be it nodejs, express, d3js, frontend or backend related you'll find something here.</p>
+									<div class="col-md-12">
+										<p>On this site you will find couple of experiments in NodeJS and published on github.
+										I wrote these as excercise material to get comfortable in several modern techniques and frameworks. Be it nodejs, express, d3js, frontend or backend related you'll find something here.</p>
 									</div>
 								</div>
 							  <div class="row">
-									<div class="col-md-6 col-md-offset-3">
+									<div class="col-md-6">
 										<h2>Data Visualization:</h2>
 										<div class="row">
-											<div class="col-md-12" id="node-ng-d3-mongo-barchart">
-												<h3><a href="/node-ng-d3-mongo-barchart/">d3.chart('BarChart')</a></h3>
+											<div class="col-md-12" id="node-barchart">
+												<h3><a href="/node-barchart/">d3.chart('BarChart')</a></h3>
 												<small class="tags">
 													tags:<i>angularjs</i>,<i>d3</i>,<i>d3.chart</i>,<i>nodejs</i>,<i>mongodb</i>
 												</small>
@@ -53,21 +87,34 @@
 													 from mongodb.
 												</p>
 												<p>
-													You can find the sourcecode on <a href="https://github.com/andreas-marschke/example-node-ng-d3-mongo-barchart">Github at andreas-marschke/example-node-ng-d3-mongo-barchart</a>. </p>
+													You can find the sourcecode on <a href="https://github.com/andreas-marschke/example-node-ng-d3-mongo-barchart">Github at andreas-marschke/example-mongo-barchart</a>. </p>
 												</p>
-												<p>Suggestions always welcome!</p>
+												<p>
+													<a href="/node-barchart" class="btn btn-primary btn-large">View the Demo</a>
+												</p>
 											</div>
 										</div>
+									</div>
+									<div class="col-md-6">
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
+				<footer class="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-4 col-md-offset-4" align="center">
+								Written by <a href="http://www.andreas-marschke.name">Andreas Marschke</a>, fork/watch/follow on <a href="https://github.com/andreas-marschke">github.com</a>
+							</div>
+						</div>
+					</div>
+				</footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/main.js"></script>
+				<script src="js/bootstrap.min.js"></script>
+				<script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
